# kotlin-bazel-previews

./: .bazelignore  .bazelrc  .gitignore  ADDRESSING_CRITICAL_ISSUES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MODULE.bazel  PREVIEW_PROVIDER_EXAMPLES.md  PREVIEW_PROVIDER_PROPOSAL.md  README.md  REVIEW_FINDINGS.md
examples/: BUILD.bazel  Greeter.kt  LimitedParameterPreview.kt  MultiParameterPreview.kt  ParameterizedPreview.kt  Shapes.kt  UserProvider.kt
preview-annotations/: BUILD.bazel
preview-annotations/src/main/kotlin/preview/annotations/: Preview.kt  PreviewParameter.kt  PreviewParameterProvider.kt
src/main/kotlin/preview/: Args.kt  BUILD.bazel  BazelRunner.kt  DirectCompiler.kt  FileWatcher.kt  JsonOutput.kt  Main.kt  PatchingClassLoader.kt  PreviewError.kt  PreviewRunner.kt  PreviewServer.kt  SourceAnalyzer.kt
src/test/kotlin/preview/: BUILD.bazel  BazelRunnerTest.kt  DirectCompilerTest.kt  FileWatcherTest.kt  MainTest.kt  PatchingClassLoaderTest.kt  PreviewRunnerTest.kt  PreviewServerTest.kt  SourceAnalyzerTest.kt
