module(name = "preview-tool")

bazel_dep(name = "rules_kotlin", version = "2.2.2")
bazel_dep(name = "rules_jvm_external", version = "6.6")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = ["junit:junit:4.13.2"],
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven")
