module(name = "kotlin-bazel-previews")

bazel_dep(name = "rules_kotlin", version = "2.2.2")
bazel_dep(name = "rules_jvm_external", version = "6.6")

rules_kotlin_extensions = use_extension("@rules_kotlin//src/main/starlark/core/repositories:bzlmod_setup.bzl", "rules_kotlin_extensions")
# All repos below are required by the extension — `bazel mod tidy` re-adds any
# that are removed. Only com_github_jetbrains_kotlin_git is used directly.
use_repo(rules_kotlin_extensions, "com_github_google_ksp", "com_github_jetbrains_kotlin", "com_github_jetbrains_kotlin_git", "com_github_pinterest_ktlint", "kotlin_build_tools_impl", "kotlinx_coroutines_core_jvm", "kotlinx_serialization_core_jvm", "kotlinx_serialization_json", "kotlinx_serialization_json_jvm")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = ["junit:junit:4.13.2"],
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven")
