load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")

# Wraps the kotlin-compiler.jar bundled by rules_kotlin (without neverlink)
# so PSI classes are available at runtime. Internal path — verify on
# rules_kotlin upgrades.
java_import(
    name = "kotlin-compiler-psi",
    jars = ["@com_github_jetbrains_kotlin_git//:lib/kotlin-compiler.jar"],
)

kt_jvm_library(
    name = "preview-lib",
    srcs = [
        "BazelRunner.kt",
        "PreviewRunner.kt",
        "SourceAnalyzer.kt",
    ],
    visibility = ["//src/test:__subpackages__"],
    deps = [":kotlin-compiler-psi"],
)

kt_jvm_binary(
    name = "preview-tool",
    srcs = ["Main.kt"],
    main_class = "preview.MainKt",
    deps = [":preview-lib"],
)
